// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recursive-schema - direct recursive > should handle direct recursive schemas 1`] = `
{
    "code": "z.object({ name: z.string(), parent: User }).partial().passthrough()",
    "schema": {
        "properties": {
            "name": {
                "type": "string",
            },
            "parent": {
                "$ref": "#/components/schemas/User",
            },
        },
        "type": "object",
    },
}
`;

exports[`recursive-schema - direct recursive > should handle direct recursive schemas 2`] = `
{
    "doc": {
        "components": {
            "schemas": {
                "User": {
                    "properties": {
                        "name": {
                            "type": "string",
                        },
                        "parent": {
                            "$ref": "#/components/schemas/User",
                        },
                    },
                    "type": "object",
                },
            },
        },
        "info": {
            "title": "",
            "version": "",
        },
        "openapi": "3.0.0",
        "paths": {},
    },
    "zodSchemaByName": {
        "User": "z.object({ name: z.string(), parent: z.lazy(() => User) }).partial().passthrough()",
    },
}
`;

exports[`recursive-schema - indirect single recursive > should handle indirect single recursive schemas 1`] = `
{
    "code": "z.object({ recursive: User, basic: z.number() }).partial().passthrough()",
    "schema": {
        "properties": {
            "basic": {
                "type": "number",
            },
            "recursive": {
                "$ref": "#/components/schemas/User",
            },
        },
        "type": "object",
    },
}
`;

exports[`recursive-schema - indirect single recursive > should handle indirect single recursive schemas 2`] = `
{
    "doc": {
        "components": {
            "schemas": {
                "Middle": {
                    "properties": {
                        "user": {
                            "$ref": "#/components/schemas/User",
                        },
                    },
                    "type": "object",
                },
                "Root": {
                    "properties": {
                        "basic": {
                            "type": "number",
                        },
                        "recursive": {
                            "$ref": "#/components/schemas/User",
                        },
                    },
                    "type": "object",
                },
                "User": {
                    "properties": {
                        "middle": {
                            "$ref": "#/components/schemas/Middle",
                        },
                        "name": {
                            "type": "string",
                        },
                    },
                    "type": "object",
                },
            },
        },
        "info": {
            "title": "",
            "version": "",
        },
        "openapi": "3.0.0",
        "paths": {},
    },
    "zodSchemaByName": {
        "Middle": "z.object({ user: z.lazy(() => User) }).partial().passthrough()",
        "User": "z.object({ name: z.string(), middle: Middle }).partial().passthrough()",
    },
}
`;

exports[`recursive-schema - indirect single recursive > should handle indirect single recursive schemas 3`] = `
{
    "deepDependencyGraph": {
        "#/components/schemas/Middle": Set {
            "#/components/schemas/User",
            "#/components/schemas/Middle",
        },
        "#/components/schemas/User": Set {
            "#/components/schemas/Middle",
            "#/components/schemas/User",
        },
    },
    "refsDependencyGraph": {
        "#/components/schemas/Middle": Set {
            "#/components/schemas/User",
        },
        "#/components/schemas/User": Set {
            "#/components/schemas/Middle",
        },
    },
}
`;

exports[`recursive-schema - indirect single recursive > should handle indirect single recursive schemas 4`] = `
[
    "#/components/schemas/User",
    "#/components/schemas/Middle",
]
`;

exports[`recursive-schema - indirect single recursive > should handle indirect single recursive schemas 5`] = `
"import { z } from "zod";
// Type Definitions
type User = Partial<{ name: string; middle: Middle }>;
type Middle = Partial<{ user: User }>;
// Zod Schemas
export const Middle = z.lazy(() =>
  z
    .object({ user: z.lazy(() => User) })
    .partial()
    .strict(),
);
export const User = z.lazy(() =>
  z.object({ name: z.string(), middle: Middle }).partial().strict(),
);
export const Root = z
  .object({ recursive: User, basic: z.number() })
  .partial()
  .strict();
// Endpoints
export const endpoints = [
  {
    method: "get",
    path: "/example",
    requestFormat: "json",
    parameters: [],
    response: z
      .object({ recursive: User, basic: z.number() })
      .partial()
      .strict(),
    errors: [],
    responses: {
      200: {
        schema: z
          .object({ recursive: User, basic: z.number() })
          .partial()
          .strict(),
        description: "OK",
      },
    },
    request: {},
    alias: "getExample",
  },
] as const;
// MCP Tools
export const mcpTools = [
  {
    tool: {
      name: "get_example",
      description: "GET /example",
      inputSchema: {
        type: "object",
      },
      outputSchema: {
        type: "object",
        properties: {
          recursive: {
            type: "object",
            properties: {
              name: {
                type: "string",
              },
              middle: {
                type: "object",
                properties: {
                  user: {
                    $ref: "#/definitions/User",
                  },
                },
              },
            },
          },
          basic: {
            type: "number",
          },
        },
      },
      annotations: {
        readOnlyHint: true,
        destructiveHint: false,
        idempotentHint: false,
      },
    },
    httpOperation: {
      method: "get",
      path: "/example",
      originalPath: "/example",
      operationId: "getExample",
    },
    security: {
      isPublic: true,
      usesGlobalSecurity: false,
      requirementSets: [],
    },
  },
] as const;
"
`;

exports[`recursive-schema - multiple recursive in one root schema > should handle multiple recursive references in one root schema 1`] = `
{
    "code": "z.object({ recursiveUser: UserWithFriends, basic: z.number() }).partial().passthrough()",
    "schema": {
        "properties": {
            "basic": {
                "type": "number",
            },
            "recursiveUser": {
                "$ref": "#/components/schemas/UserWithFriends",
            },
        },
        "type": "object",
    },
}
`;

exports[`recursive-schema - multiple recursive in one root schema > should handle multiple recursive references in one root schema 2`] = `
{
    "doc": {
        "components": {
            "schemas": {
                "Friend": {
                    "properties": {
                        "circle": {
                            "items": {
                                "$ref": "#/components/schemas/Friend",
                            },
                            "type": "array",
                        },
                        "nickname": {
                            "type": "string",
                        },
                        "user": {
                            "$ref": "#/components/schemas/UserWithFriends",
                        },
                    },
                    "type": "object",
                },
                "ObjectWithRecursiveArray": {
                    "properties": {
                        "array": {
                            "items": {
                                "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                            },
                            "type": "array",
                        },
                        "isInsideObjectWithRecursiveArray": {
                            "type": "boolean",
                        },
                    },
                    "type": "object",
                },
                "ResponseSchema": {
                    "properties": {
                        "basic": {
                            "type": "number",
                        },
                        "recursiveRef": {
                            "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                        },
                    },
                    "type": "object",
                },
                "User": {
                    "properties": {
                        "name": {
                            "type": "string",
                        },
                        "parent": {
                            "$ref": "#/components/schemas/User",
                        },
                    },
                    "type": "object",
                },
                "UserWithFriends": {
                    "properties": {
                        "bestFriend": {
                            "$ref": "#/components/schemas/Friend",
                        },
                        "friends": {
                            "items": {
                                "$ref": "#/components/schemas/Friend",
                            },
                            "type": "array",
                        },
                        "name": {
                            "type": "string",
                        },
                        "parent": {
                            "$ref": "#/components/schemas/UserWithFriends",
                        },
                    },
                    "type": "object",
                },
            },
        },
        "info": {
            "title": "",
            "version": "",
        },
        "openapi": "3.0.0",
        "paths": {},
    },
    "zodSchemaByName": {
        "Friend": "z.object({ nickname: z.string(), user: z.lazy(() => UserWithFriends), circle: z.array(z.lazy(() => Friend)) }).partial().passthrough()",
        "UserWithFriends": "z.object({ name: z.string(), parent: z.lazy(() => UserWithFriends), friends: z.array(Friend), bestFriend: Friend }).partial().passthrough()",
    },
}
`;

exports[`recursive-schema - multiple recursive in one root schema > should handle multiple recursive references in one root schema 3`] = `
{
    "deepDependencyGraph": {
        "#/components/schemas/Friend": Set {
            "#/components/schemas/UserWithFriends",
            "#/components/schemas/Friend",
        },
        "#/components/schemas/ObjectWithRecursiveArray": Set {
            "#/components/schemas/ObjectWithRecursiveArray",
        },
        "#/components/schemas/ResponseSchema": Set {
            "#/components/schemas/ObjectWithRecursiveArray",
        },
        "#/components/schemas/User": Set {
            "#/components/schemas/User",
        },
        "#/components/schemas/UserWithFriends": Set {
            "#/components/schemas/UserWithFriends",
            "#/components/schemas/Friend",
        },
    },
    "doc": {
        "components": {
            "schemas": {
                "Friend": {
                    "properties": {
                        "circle": {
                            "items": {
                                "$ref": "#/components/schemas/Friend",
                            },
                            "type": "array",
                        },
                        "nickname": {
                            "type": "string",
                        },
                        "user": {
                            "$ref": "#/components/schemas/UserWithFriends",
                        },
                    },
                    "type": "object",
                },
                "ObjectWithRecursiveArray": {
                    "properties": {
                        "array": {
                            "items": {
                                "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                            },
                            "type": "array",
                        },
                        "isInsideObjectWithRecursiveArray": {
                            "type": "boolean",
                        },
                    },
                    "type": "object",
                },
                "ResponseSchema": {
                    "properties": {
                        "basic": {
                            "type": "number",
                        },
                        "recursiveRef": {
                            "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                        },
                    },
                    "type": "object",
                },
                "User": {
                    "properties": {
                        "name": {
                            "type": "string",
                        },
                        "parent": {
                            "$ref": "#/components/schemas/User",
                        },
                    },
                    "type": "object",
                },
                "UserWithFriends": {
                    "properties": {
                        "bestFriend": {
                            "$ref": "#/components/schemas/Friend",
                        },
                        "friends": {
                            "items": {
                                "$ref": "#/components/schemas/Friend",
                            },
                            "type": "array",
                        },
                        "name": {
                            "type": "string",
                        },
                        "parent": {
                            "$ref": "#/components/schemas/UserWithFriends",
                        },
                    },
                    "type": "object",
                },
            },
        },
        "info": {
            "title": "Swagger Petstore - OpenAPI 3.0",
            "version": "1.0.11",
        },
        "openapi": "3.0.3",
        "paths": {
            "/example": {
                "get": {
                    "operationId": "getExample",
                    "responses": {
                        "200": {
                            "content": {
                                "application/json": {
                                    "schema": {
                                        "properties": {
                                            "someProp": {
                                                "type": "boolean",
                                            },
                                            "someUser": {
                                                "$ref": "#/components/schemas/UserWithFriends",
                                            },
                                        },
                                        "type": "object",
                                    },
                                },
                            },
                            "description": "OK",
                        },
                    },
                },
            },
        },
    },
    "endpoints": [
        {
            "errors": [],
            "method": "get",
            "parameters": [],
            "path": "/example",
            "requestFormat": "json",
            "response": "z.object({ someUser: UserWithFriends, someProp: z.boolean() }).partial().passthrough()",
        },
    ],
    "issues": {
        "ignoredFallbackResponse": [],
        "ignoredGenericError": [],
    },
    "refsDependencyGraph": {
        "#/components/schemas/Friend": Set {
            "#/components/schemas/UserWithFriends",
            "#/components/schemas/Friend",
        },
        "#/components/schemas/ObjectWithRecursiveArray": Set {
            "#/components/schemas/ObjectWithRecursiveArray",
        },
        "#/components/schemas/ResponseSchema": Set {
            "#/components/schemas/ObjectWithRecursiveArray",
        },
        "#/components/schemas/User": Set {
            "#/components/schemas/User",
        },
        "#/components/schemas/UserWithFriends": Set {
            "#/components/schemas/UserWithFriends",
            "#/components/schemas/Friend",
        },
    },
    "zodSchemaByName": {
        "Friend": "z.object({ nickname: z.string(), user: z.lazy(() => UserWithFriends), circle: z.array(z.lazy(() => Friend)) }).partial().passthrough()",
        "UserWithFriends": "z.object({ name: z.string(), parent: z.lazy(() => UserWithFriends), friends: z.array(Friend), bestFriend: Friend }).partial().passthrough()",
    },
}
`;

exports[`recursive-schema - multiple recursive in one root schema > should handle multiple recursive references in one root schema 4`] = `
{
    "_ir": {
        "components": [
            {
                "metadata": {
                    "circularReferences": [
                        "#/components/schemas/User",
                    ],
                    "dependencyGraph": {
                        "depth": 0,
                        "referencedBy": [],
                        "references": [],
                    },
                    "nullable": false,
                    "required": false,
                    "zodChain": {
                        "defaults": [],
                        "presence": "optional",
                        "validations": [],
                    },
                },
                "name": "User",
                "schema": {
                    "metadata": {
                        "circularReferences": [
                            "#/components/schemas/User",
                        ],
                        "dependencyGraph": {
                            "depth": 0,
                            "referencedBy": [],
                            "references": [],
                        },
                        "nullable": false,
                        "required": false,
                        "zodChain": {
                            "defaults": [],
                            "presence": "optional",
                            "validations": [],
                        },
                    },
                    "properties": {
                        "dataType": "IRSchemaProperties",
                        "value": {
                            "name": {
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "string",
                            },
                            "parent": {
                                "$ref": "#/components/schemas/User",
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                            },
                        },
                    },
                    "required": [],
                    "type": "object",
                },
                "type": "schema",
            },
            {
                "metadata": {
                    "circularReferences": [
                        "#/components/schemas/UserWithFriends",
                        "#/components/schemas/Friend",
                    ],
                    "dependencyGraph": {
                        "depth": 0,
                        "referencedBy": [],
                        "references": [],
                    },
                    "nullable": false,
                    "required": false,
                    "zodChain": {
                        "defaults": [],
                        "presence": "optional",
                        "validations": [],
                    },
                },
                "name": "UserWithFriends",
                "schema": {
                    "metadata": {
                        "circularReferences": [
                            "#/components/schemas/UserWithFriends",
                            "#/components/schemas/Friend",
                        ],
                        "dependencyGraph": {
                            "depth": 0,
                            "referencedBy": [],
                            "references": [],
                        },
                        "nullable": false,
                        "required": false,
                        "zodChain": {
                            "defaults": [],
                            "presence": "optional",
                            "validations": [],
                        },
                    },
                    "properties": {
                        "dataType": "IRSchemaProperties",
                        "value": {
                            "bestFriend": {
                                "$ref": "#/components/schemas/Friend",
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                            },
                            "friends": {
                                "items": {
                                    "$ref": "#/components/schemas/Friend",
                                    "metadata": {
                                        "circularReferences": [],
                                        "dependencyGraph": {
                                            "depth": 0,
                                            "referencedBy": [],
                                            "references": [],
                                        },
                                        "nullable": false,
                                        "required": false,
                                        "zodChain": {
                                            "defaults": [],
                                            "presence": "optional",
                                            "validations": [],
                                        },
                                    },
                                },
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "array",
                            },
                            "name": {
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "string",
                            },
                            "parent": {
                                "$ref": "#/components/schemas/UserWithFriends",
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                            },
                        },
                    },
                    "required": [],
                    "type": "object",
                },
                "type": "schema",
            },
            {
                "metadata": {
                    "circularReferences": [
                        "#/components/schemas/UserWithFriends",
                        "#/components/schemas/Friend",
                    ],
                    "dependencyGraph": {
                        "depth": 0,
                        "referencedBy": [],
                        "references": [],
                    },
                    "nullable": false,
                    "required": false,
                    "zodChain": {
                        "defaults": [],
                        "presence": "optional",
                        "validations": [],
                    },
                },
                "name": "Friend",
                "schema": {
                    "metadata": {
                        "circularReferences": [
                            "#/components/schemas/UserWithFriends",
                            "#/components/schemas/Friend",
                        ],
                        "dependencyGraph": {
                            "depth": 0,
                            "referencedBy": [],
                            "references": [],
                        },
                        "nullable": false,
                        "required": false,
                        "zodChain": {
                            "defaults": [],
                            "presence": "optional",
                            "validations": [],
                        },
                    },
                    "properties": {
                        "dataType": "IRSchemaProperties",
                        "value": {
                            "circle": {
                                "items": {
                                    "$ref": "#/components/schemas/Friend",
                                    "metadata": {
                                        "circularReferences": [],
                                        "dependencyGraph": {
                                            "depth": 0,
                                            "referencedBy": [],
                                            "references": [],
                                        },
                                        "nullable": false,
                                        "required": false,
                                        "zodChain": {
                                            "defaults": [],
                                            "presence": "optional",
                                            "validations": [],
                                        },
                                    },
                                },
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "array",
                            },
                            "nickname": {
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "string",
                            },
                            "user": {
                                "$ref": "#/components/schemas/UserWithFriends",
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                            },
                        },
                    },
                    "required": [],
                    "type": "object",
                },
                "type": "schema",
            },
            {
                "metadata": {
                    "circularReferences": [
                        "#/components/schemas/ObjectWithRecursiveArray",
                    ],
                    "dependencyGraph": {
                        "depth": 0,
                        "referencedBy": [],
                        "references": [],
                    },
                    "nullable": false,
                    "required": false,
                    "zodChain": {
                        "defaults": [],
                        "presence": "optional",
                        "validations": [],
                    },
                },
                "name": "ResponseSchema",
                "schema": {
                    "metadata": {
                        "circularReferences": [
                            "#/components/schemas/ObjectWithRecursiveArray",
                        ],
                        "dependencyGraph": {
                            "depth": 0,
                            "referencedBy": [],
                            "references": [],
                        },
                        "nullable": false,
                        "required": false,
                        "zodChain": {
                            "defaults": [],
                            "presence": "optional",
                            "validations": [],
                        },
                    },
                    "properties": {
                        "dataType": "IRSchemaProperties",
                        "value": {
                            "basic": {
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "number",
                            },
                            "recursiveRef": {
                                "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                            },
                        },
                    },
                    "required": [],
                    "type": "object",
                },
                "type": "schema",
            },
            {
                "metadata": {
                    "circularReferences": [
                        "#/components/schemas/ObjectWithRecursiveArray",
                    ],
                    "dependencyGraph": {
                        "depth": 0,
                        "referencedBy": [],
                        "references": [],
                    },
                    "nullable": false,
                    "required": false,
                    "zodChain": {
                        "defaults": [],
                        "presence": "optional",
                        "validations": [],
                    },
                },
                "name": "ObjectWithRecursiveArray",
                "schema": {
                    "metadata": {
                        "circularReferences": [
                            "#/components/schemas/ObjectWithRecursiveArray",
                        ],
                        "dependencyGraph": {
                            "depth": 0,
                            "referencedBy": [],
                            "references": [],
                        },
                        "nullable": false,
                        "required": false,
                        "zodChain": {
                            "defaults": [],
                            "presence": "optional",
                            "validations": [],
                        },
                    },
                    "properties": {
                        "dataType": "IRSchemaProperties",
                        "value": {
                            "array": {
                                "items": {
                                    "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                                    "metadata": {
                                        "circularReferences": [],
                                        "dependencyGraph": {
                                            "depth": 0,
                                            "referencedBy": [],
                                            "references": [],
                                        },
                                        "nullable": false,
                                        "required": false,
                                        "zodChain": {
                                            "defaults": [],
                                            "presence": "optional",
                                            "validations": [],
                                        },
                                    },
                                },
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "array",
                            },
                            "isInsideObjectWithRecursiveArray": {
                                "metadata": {
                                    "circularReferences": [],
                                    "dependencyGraph": {
                                        "depth": 0,
                                        "referencedBy": [],
                                        "references": [],
                                    },
                                    "nullable": false,
                                    "required": false,
                                    "zodChain": {
                                        "defaults": [],
                                        "presence": "optional",
                                        "validations": [],
                                    },
                                },
                                "type": "boolean",
                            },
                        },
                    },
                    "required": [],
                    "type": "object",
                },
                "type": "schema",
            },
        ],
        "dependencyGraph": {
            "circularReferences": [],
            "nodes": Map {},
            "topologicalOrder": [],
        },
        "enums": Map {},
        "info": {
            "title": "Swagger Petstore - OpenAPI 3.0",
            "version": "1.0.11",
        },
        "openApiVersion": "3.0.3",
        "operations": [
            {
                "method": "get",
                "operationId": "getExample",
                "parameters": [],
                "parametersByLocation": {
                    "cookie": [],
                    "header": [],
                    "path": [],
                    "query": [],
                },
                "path": "/example",
                "responses": [
                    {
                        "content": {
                            "application/json": {
                                "schema": {
                                    "metadata": {
                                        "circularReferences": [],
                                        "dependencyGraph": {
                                            "depth": 0,
                                            "referencedBy": [],
                                            "references": [],
                                        },
                                        "nullable": false,
                                        "required": false,
                                        "zodChain": {
                                            "defaults": [],
                                            "presence": "optional",
                                            "validations": [],
                                        },
                                    },
                                    "properties": {
                                        "dataType": "IRSchemaProperties",
                                        "value": {
                                            "someProp": {
                                                "metadata": {
                                                    "circularReferences": [],
                                                    "dependencyGraph": {
                                                        "depth": 0,
                                                        "referencedBy": [],
                                                        "references": [],
                                                    },
                                                    "nullable": false,
                                                    "required": false,
                                                    "zodChain": {
                                                        "defaults": [],
                                                        "presence": "optional",
                                                        "validations": [],
                                                    },
                                                },
                                                "type": "boolean",
                                            },
                                            "someUser": {
                                                "$ref": "#/components/schemas/UserWithFriends",
                                                "metadata": {
                                                    "circularReferences": [],
                                                    "dependencyGraph": {
                                                        "depth": 0,
                                                        "referencedBy": [],
                                                        "references": [],
                                                    },
                                                    "nullable": false,
                                                    "required": false,
                                                    "zodChain": {
                                                        "defaults": [],
                                                        "presence": "optional",
                                                        "validations": [],
                                                    },
                                                },
                                            },
                                        },
                                    },
                                    "required": [],
                                    "type": "object",
                                },
                            },
                        },
                        "description": "OK",
                        "statusCode": "200",
                    },
                ],
            },
        ],
        "servers": [],
        "version": "1.0.0",
    },
    "circularTypeByName": {
        "Friend": true,
        "UserWithFriends": true,
    },
    "emittedType": {
        "Friend": true,
        "ObjectWithRecursiveArray": true,
        "User": true,
        "UserWithFriends": true,
    },
    "endpoints": [
        {
            "errors": [],
            "method": "get",
            "parameters": [],
            "path": "/example",
            "requestFormat": "json",
            "response": "z.object({ someUser: UserWithFriends, someProp: z.boolean() }).partial().passthrough()",
        },
    ],
    "endpointsGroups": {},
    "mcpTools": [
        {
            "httpOperation": {
                "method": "get",
                "operationId": "getExample",
                "originalPath": "/example",
                "path": "/example",
            },
            "method": "get",
            "operationId": "getExample",
            "originalPath": "/example",
            "path": "/example",
            "security": {
                "isPublic": true,
                "requirementSets": [],
                "usesGlobalSecurity": false,
            },
            "tool": {
                "annotations": {
                    "destructiveHint": false,
                    "idempotentHint": false,
                    "readOnlyHint": true,
                },
                "description": "GET /example",
                "inputSchema": {
                    "type": "object",
                },
                "name": "get_example",
                "outputSchema": {
                    "properties": {
                        "someProp": {
                            "type": "boolean",
                        },
                        "someUser": {
                            "properties": {
                                "bestFriend": {
                                    "properties": {
                                        "circle": {
                                            "items": {
                                                "$ref": "#/definitions/Friend",
                                            },
                                            "type": "array",
                                        },
                                        "nickname": {
                                            "type": "string",
                                        },
                                        "user": {
                                            "$ref": "#/definitions/UserWithFriends",
                                        },
                                    },
                                    "type": "object",
                                },
                                "friends": {
                                    "items": {
                                        "properties": {
                                            "circle": {
                                                "items": {
                                                    "$ref": "#/definitions/Friend",
                                                },
                                                "type": "array",
                                            },
                                            "nickname": {
                                                "type": "string",
                                            },
                                            "user": {
                                                "$ref": "#/definitions/UserWithFriends",
                                            },
                                        },
                                        "type": "object",
                                    },
                                    "type": "array",
                                },
                                "name": {
                                    "type": "string",
                                },
                                "parent": {
                                    "$ref": "#/definitions/UserWithFriends",
                                },
                            },
                            "type": "object",
                        },
                    },
                    "type": "object",
                },
            },
        },
    ],
    "options": {
        "baseUrl": "",
        "withAlias": false,
    },
    "schemas": {
        "Friend": "z.lazy(() => z.object({ nickname: z.string(), user: z.lazy(() => UserWithFriends), circle: z.array(z.lazy(() => Friend)) }).partial().passthrough())",
        "UserWithFriends": "z.lazy(() => z.object({ name: z.string(), parent: z.lazy(() => UserWithFriends), friends: z.array(Friend), bestFriend: Friend }).partial().passthrough())",
    },
    "types": {
        "Friend": "type Friend = Partial<{ nickname: string; user: UserWithFriends; circle: Array<Friend> }>;",
        "ObjectWithRecursiveArray": "type ObjectWithRecursiveArray = Partial<{ isInsideObjectWithRecursiveArray: boolean; array: Array<ObjectWithRecursiveArray> }>;",
        "User": "type User = Partial<{ name: string; parent: User }>;",
        "UserWithFriends": "type UserWithFriends = Partial<{ name: string; parent: UserWithFriends; friends: Array<Friend>; bestFriend: Friend }>;",
    },
}
`;

exports[`recursive-schema - multiple recursive in one root schema > should handle multiple recursive references in one root schema 5`] = `
"import { z } from "zod";
// Type Definitions
type User = Partial<{ name: string; parent: User }>;
type UserWithFriends = Partial<{
  name: string;
  parent: UserWithFriends;
  friends: Array<Friend>;
  bestFriend: Friend;
}>;
type Friend = Partial<{
  nickname: string;
  user: UserWithFriends;
  circle: Array<Friend>;
}>;
type ObjectWithRecursiveArray = Partial<{
  isInsideObjectWithRecursiveArray: boolean;
  array: Array<ObjectWithRecursiveArray>;
}>;
// Zod Schemas
export const User = z.lazy(() =>
  z.object({ name: z.string(), parent: User }).partial().strict(),
);
export const Friend = z.lazy(() =>
  z
    .object({
      nickname: z.string(),
      user: z.lazy(() => UserWithFriends),
      circle: z.array(z.lazy(() => Friend)),
    })
    .partial()
    .strict(),
);
export const UserWithFriends = z.lazy(() =>
  z
    .object({
      name: z.string(),
      parent: z.lazy(() => UserWithFriends),
      friends: z.array(Friend),
      bestFriend: Friend,
    })
    .partial()
    .strict(),
);
export const ObjectWithRecursiveArray = z.lazy(() =>
  z
    .object({
      isInsideObjectWithRecursiveArray: z.boolean(),
      array: z.array(z.lazy(() => ObjectWithRecursiveArray)),
    })
    .partial()
    .strict(),
);
export const ResponseSchema = z
  .object({ recursiveRef: ObjectWithRecursiveArray, basic: z.number() })
  .partial()
  .strict();
// Endpoints
export const endpoints = [
  {
    method: "get",
    path: "/example",
    requestFormat: "json",
    parameters: [],
    response: z
      .object({ someUser: UserWithFriends, someProp: z.boolean() })
      .partial()
      .strict(),
    errors: [],
    responses: {
      200: {
        schema: z
          .object({ someUser: UserWithFriends, someProp: z.boolean() })
          .partial()
          .strict(),
        description: "OK",
      },
    },
    request: {},
    alias: "getExample",
  },
] as const;
// MCP Tools
export const mcpTools = [
  {
    tool: {
      name: "get_example",
      description: "GET /example",
      inputSchema: {
        type: "object",
      },
      outputSchema: {
        type: "object",
        properties: {
          someUser: {
            type: "object",
            properties: {
              name: {
                type: "string",
              },
              parent: {
                $ref: "#/definitions/UserWithFriends",
              },
              friends: {
                type: "array",
                items: {
                  type: "object",
                  properties: {
                    nickname: {
                      type: "string",
                    },
                    user: {
                      $ref: "#/definitions/UserWithFriends",
                    },
                    circle: {
                      type: "array",
                      items: {
                        $ref: "#/definitions/Friend",
                      },
                    },
                  },
                },
              },
              bestFriend: {
                type: "object",
                properties: {
                  nickname: {
                    type: "string",
                  },
                  user: {
                    $ref: "#/definitions/UserWithFriends",
                  },
                  circle: {
                    type: "array",
                    items: {
                      $ref: "#/definitions/Friend",
                    },
                  },
                },
              },
            },
          },
          someProp: {
            type: "boolean",
          },
        },
      },
      annotations: {
        readOnlyHint: true,
        destructiveHint: false,
        idempotentHint: false,
      },
    },
    httpOperation: {
      method: "get",
      path: "/example",
      originalPath: "/example",
      operationId: "getExample",
    },
    security: {
      isPublic: true,
      usesGlobalSecurity: false,
      requirementSets: [],
    },
  },
] as const;
"
`;

exports[`recursive-schema - recursive array > should handle recursive array schemas 1`] = `
{
    "code": "z.object({ recursiveRef: ObjectWithRecursiveArray, basic: z.number() }).partial().passthrough()",
    "schema": {
        "properties": {
            "basic": {
                "type": "number",
            },
            "recursiveRef": {
                "$ref": "#/components/schemas/ObjectWithRecursiveArray",
            },
        },
        "type": "object",
    },
}
`;

exports[`recursive-schema - recursive array > should handle recursive array schemas 2`] = `
{
    "doc": {
        "components": {
            "schemas": {
                "ObjectWithRecursiveArray": {
                    "properties": {
                        "array": {
                            "items": {
                                "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                            },
                            "type": "array",
                        },
                        "isInsideObjectWithRecursiveArray": {
                            "type": "boolean",
                        },
                    },
                    "type": "object",
                },
            },
        },
        "info": {
            "title": "",
            "version": "",
        },
        "openapi": "3.0.0",
        "paths": {},
    },
    "zodSchemaByName": {
        "ObjectWithRecursiveArray": "z.object({ isInsideObjectWithRecursiveArray: z.boolean(), array: z.array(z.lazy(() => ObjectWithRecursiveArray)) }).partial().passthrough()",
    },
}
`;

exports[`recursive-schema - recursive array > should handle recursive array schemas 3`] = `
{
    "deepDependencyGraph": {
        "#/components/schemas/ObjectWithRecursiveArray": Set {
            "#/components/schemas/ObjectWithRecursiveArray",
        },
    },
    "doc": {
        "components": {
            "schemas": {
                "ObjectWithRecursiveArray": {
                    "properties": {
                        "array": {
                            "items": {
                                "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                            },
                            "type": "array",
                        },
                        "isInsideObjectWithRecursiveArray": {
                            "type": "boolean",
                        },
                    },
                    "type": "object",
                },
            },
        },
        "info": {
            "title": "Swagger Petstore - OpenAPI 3.0",
            "version": "1.0.11",
        },
        "openapi": "3.0.3",
        "paths": {
            "/example": {
                "get": {
                    "operationId": "getExample",
                    "responses": {
                        "200": {
                            "content": {
                                "application/json": {
                                    "schema": {
                                        "properties": {
                                            "basic": {
                                                "type": "number",
                                            },
                                            "recursiveRef": {
                                                "$ref": "#/components/schemas/ObjectWithRecursiveArray",
                                            },
                                        },
                                        "type": "object",
                                    },
                                },
                            },
                            "description": "OK",
                        },
                    },
                },
            },
        },
    },
    "endpoints": [
        {
            "errors": [],
            "method": "get",
            "parameters": [],
            "path": "/example",
            "requestFormat": "json",
            "response": "z.object({ recursiveRef: ObjectWithRecursiveArray, basic: z.number() }).partial().passthrough()",
        },
    ],
    "issues": {
        "ignoredFallbackResponse": [],
        "ignoredGenericError": [],
    },
    "refsDependencyGraph": {
        "#/components/schemas/ObjectWithRecursiveArray": Set {
            "#/components/schemas/ObjectWithRecursiveArray",
        },
    },
    "zodSchemaByName": {
        "ObjectWithRecursiveArray": "z.object({ isInsideObjectWithRecursiveArray: z.boolean(), array: z.array(z.lazy(() => ObjectWithRecursiveArray)) }).partial().passthrough()",
    },
}
`;

exports[`recursive-schema - with ref to simple schema > should generate simple schema and dependencies when recursive schema has $ref to it 1`] = `
{
    "code": "z.object({ playlist: Playlist, by_author: Author }).partial().passthrough()",
    "schema": {
        "properties": {
            "by_author": {
                "$ref": "#/components/schemas/Author",
            },
            "playlist": {
                "$ref": "#/components/schemas/Playlist",
            },
        },
        "type": "object",
    },
}
`;

exports[`recursive-schema - with ref to simple schema > should generate simple schema and dependencies when recursive schema has $ref to it 2`] = `
{
    "doc": {
        "components": {
            "schemas": {
                "Author": {
                    "properties": {
                        "mail": {
                            "type": "string",
                        },
                        "name": {
                            "type": "string",
                        },
                        "settings": {
                            "$ref": "#/components/schemas/Settings",
                        },
                    },
                    "type": "object",
                },
                "Playlist": {
                    "properties": {
                        "author": {
                            "$ref": "#/components/schemas/Author",
                        },
                        "name": {
                            "type": "string",
                        },
                        "songs": {
                            "items": {
                                "$ref": "#/components/schemas/Song",
                            },
                            "type": "array",
                        },
                    },
                    "type": "object",
                },
                "Settings": {
                    "properties": {
                        "theme_color": {
                            "type": "string",
                        },
                    },
                    "type": "object",
                },
                "Song": {
                    "properties": {
                        "duration": {
                            "type": "number",
                        },
                        "in_playlists": {
                            "items": {
                                "$ref": "#/components/schemas/Playlist",
                            },
                            "type": "array",
                        },
                        "name": {
                            "type": "string",
                        },
                    },
                    "type": "object",
                },
            },
        },
        "info": {
            "title": "",
            "version": "",
        },
        "openapi": "3.0.0",
        "paths": {},
    },
    "zodSchemaByName": {
        "Author": "z.object({ name: z.string(), mail: z.string(), settings: Settings }).partial().passthrough()",
        "Playlist": "z.object({ name: z.string(), author: Author, songs: z.array(Song) }).partial().passthrough()",
        "Settings": "z.object({ theme_color: z.string() }).partial().passthrough()",
        "Song": "z.object({ name: z.string(), duration: z.number(), in_playlists: z.array(z.lazy(() => Playlist)) }).partial().passthrough()",
    },
}
`;

exports[`recursive-schema - with ref to simple schema > should generate simple schema and dependencies when recursive schema has $ref to it 3`] = `
"import { z } from "zod";
// Type Definitions
type Playlist = Partial<{ name: string; author: Author; songs: Array<Song> }>;
type Author = Partial<{ name: string; mail: string; settings: Settings }>;
type Settings = Partial<{ theme_color: string }>;
type Song = Partial<{
  name: string;
  duration: number;
  in_playlists: Array<Playlist>;
}>;
// Zod Schemas
export const Settings = z
  .object({ theme_color: z.string() })
  .partial()
  .strict();
export const Author = z
  .object({ name: z.string(), mail: z.string(), settings: Settings })
  .partial()
  .strict();
export const Song = z.lazy(() =>
  z
    .object({
      name: z.string(),
      duration: z.number(),
      in_playlists: z.array(z.lazy(() => Playlist)),
    })
    .partial()
    .strict(),
);
export const Playlist = z.lazy(() =>
  z
    .object({ name: z.string(), author: Author, songs: z.array(Song) })
    .partial()
    .strict(),
);
// Endpoints
export const endpoints = [
  {
    method: "get",
    path: "/example",
    requestFormat: "json",
    parameters: [],
    response: z
      .object({ playlist: Playlist, by_author: Author })
      .partial()
      .strict(),
    errors: [],
    responses: {
      200: {
        schema: z
          .object({ playlist: Playlist, by_author: Author })
          .partial()
          .strict(),
        description: "OK",
      },
    },
    request: {},
    alias: "getExample",
  },
] as const;
// MCP Tools
export const mcpTools = [
  {
    tool: {
      name: "get_example",
      description: "GET /example",
      inputSchema: {
        type: "object",
      },
      outputSchema: {
        type: "object",
        properties: {
          playlist: {
            type: "object",
            properties: {
              name: {
                type: "string",
              },
              author: {
                type: "object",
                properties: {
                  name: {
                    type: "string",
                  },
                  mail: {
                    type: "string",
                  },
                  settings: {
                    type: "object",
                    properties: {
                      theme_color: {
                        type: "string",
                      },
                    },
                  },
                },
              },
              songs: {
                type: "array",
                items: {
                  type: "object",
                  properties: {
                    name: {
                      type: "string",
                    },
                    duration: {
                      type: "number",
                    },
                    in_playlists: {
                      type: "array",
                      items: {
                        $ref: "#/definitions/Playlist",
                      },
                    },
                  },
                },
              },
            },
          },
          by_author: {
            type: "object",
            properties: {
              name: {
                type: "string",
              },
              mail: {
                type: "string",
              },
              settings: {
                type: "object",
                properties: {
                  theme_color: {
                    type: "string",
                  },
                },
              },
            },
          },
        },
      },
      annotations: {
        readOnlyHint: true,
        destructiveHint: false,
        idempotentHint: false,
      },
    },
    httpOperation: {
      method: "get",
      path: "/example",
      originalPath: "/example",
      operationId: "getExample",
    },
    security: {
      isPublic: true,
      usesGlobalSecurity: false,
      requirementSets: [],
    },
  },
] as const;
"
`;
